--- a/holamundo/app/src/main/res/values/colors.xml
+++ b/holamundo/app/src/main/res/values/colors.xml
@@ -2,7 +2,7 @@
 <resources>
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
-    <color name="blanco">#ffff</color>
+    <color name="colorAccent">#ff4081</color>
+    <color name="blanco">#ffffff</color>
     <color name="negro">#000000</color>
 </resources>
