--- a/MarvelvsDc/app/src/main/res/layout/activity_login.xml
+++ b/MarvelvsDc/app/src/main/res/layout/activity_login.xml
@@ -101,7 +101,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:text="TextView"
+        android:text="Registrte Aqui!"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btn_ingresar" />
