--- a/MarvelvsDc/app/src/main/res/layout/activity_login.xml
+++ b/MarvelvsDc/app/src/main/res/layout/activity_login.xml
@@ -45,7 +45,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/appBarLayout"
-        app:srcCompat="@mipmap/ic_launcher" />
+        app:srcCompat="@drawable/spiderman" />
 
     <android.support.constraint.Guideline
         android:id="@+id/guideline"
@@ -89,7 +89,9 @@
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
+        android:background="@color/colorPrimaryDarkMarvel"
         android:text="Ingresar"
+        android:textColor="@color/colorWhite"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/edt_passowrd" />
@@ -113,7 +115,9 @@
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
+        android:background="@color/colorPrimaryDarkMarvel"
         android:text="Registrar"
+        android:textColor="@color/colorWhite"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txt_rmensaje_egisro" />
