--- a/MarvelvsDc/app/src/main/res/values/styles.xml
+++ b/MarvelvsDc/app/src/main/res/values/styles.xml
@@ -8,7 +8,19 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+    <style name="AppThemeMarvel" parent="Theme.AppCompat.Light.DarkActionBar">
+        <!-- Customize your theme here. -->
+        <item name="colorPrimary">@color/colorPrimaryMarvel</item>
+        <item name="colorPrimaryDark">@color/colorPrimaryDarkMarvel</item>
+        <item name="colorAccent">@color/colorAccentMarvel</item>
+    </style>
+
     <style name="AppTheme.NoActionBar">
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
+    </style>
+
+    <style name="AppThemeMarvel.NoActionBar">
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
     </style>
