--- a/MarvelvsDc/app/src/main/res/layout/content_personje.xml
+++ b/MarvelvsDc/app/src/main/res/layout/content_personje.xml
@@ -8,9 +8,30 @@
     tools:context=".PersonjeActivity"
     tools:showIn="@layout/activity_personje">
 
-    <fragment
-        android:id="@+id/fragment"
-        android:name="com.marvelvsdc.brian.marvelvsdc.PersonajeListFragment"
+    <FrameLayout
+        android:id="@+id/framelyout_container"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintBottom_toTopOf="@+id/guideline3"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+    </FrameLayout>
+
+    <android.support.constraint.Guideline
+        android:id="@+id/guideline3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.50" />
+
+    <FrameLayout
+        android:id="@+id/fragmelayout_container2"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginBottom="8dp"
@@ -20,5 +41,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/framelyout_container">
+
+    </FrameLayout>
 </android.support.constraint.ConstraintLayout>
