--- a/MarvelvsDc/app/src/main/res/layout/content_menu.xml
+++ b/MarvelvsDc/app/src/main/res/layout/content_menu.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent"
     android:background="@color/colorBlack"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context=".MenuActivity"
+    tools:context=".activities.MenuActivity"
     tools:showIn="@layout/app_bar_menu">
 
     <android.support.constraint.Guideline
