--- a/MarvelvsDc/app/src/main/res/layout/content_settig.xml
+++ b/MarvelvsDc/app/src/main/res/layout/content_settig.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context=".SettigActivity"
+    tools:context=".activities.SettigActivity"
     tools:showIn="@layout/activity_settig">
 
 
@@ -27,7 +27,7 @@
 
         <fragment
             android:id="@+id/fragment2"
-            android:name="com.marvelvsdc.brian.marvelvsdc.DcFragment"
+            android:name="com.marvelvsdc.brian.marvelvsdc.fragments.DcFragment"
             android:layout_width="0dp"
             android:layout_height="0dp"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -49,7 +49,7 @@
 
         <fragment
             android:id="@+id/fragment4"
-            android:name="com.marvelvsdc.brian.marvelvsdc.MarvelSelecFragment"
+            android:name="com.marvelvsdc.brian.marvelvsdc.fragments.MarvelSelecFragment"
             android:layout_width="0dp"
             android:layout_height="0dp"
             app:layout_constraintBottom_toBottomOf="parent"
