--- a/MarvelvsDc/app/src/main/res/layout/fragment_marvel_selec.xml
+++ b/MarvelvsDc/app/src/main/res/layout/fragment_marvel_selec.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorPrimaryMarvel"
-    tools:context=".MarvelSelecFragment">
+    tools:context=".fragments.MarvelSelecFragment">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
