--- a/MarvelvsDc/app/src/main/res/layout/fragment_personaje_detail.xml
+++ b/MarvelvsDc/app/src/main/res/layout/fragment_personaje_detail.xml
@@ -6,7 +6,7 @@
     android:id="@+id/constraint_container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".PersonajeDetailFragment">
+    tools:context=".fragments.PersonajeDetailFragment">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
